// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentSource customTitle snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -22px;
}

.emotion-3:hover {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
  margin-bottom: 16px;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 4px;
  padding-bottom: 4px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  cursor: pointer;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: 8px;
  padding-bottom: 8px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8:hover a {
  visibility: visible;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-9 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-9 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-9 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-9 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-9 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-9 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-9 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-9 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-9 .react-tabs__tab-panel {
  display: none;
}

.emotion-9 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-9 .react-tabs__tab {
  font-size: 14px;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-12 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-12 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-14 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-14 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-21 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-21 code {
  color: inherit;
}

.emotion-22 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-23 {
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id="my-story-title"
    >
      <div
        class="emotion-2"
      >
        <a
          aria-label="navigate to My Story Title section"
          class="emotion-3"
          data-id="my-story-title"
          data-level="3"
          data-title="My Story Title"
          href="http://localhost/#my-story-title"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="18"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h3
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            My Story Title
            <a
              aria-expanded="true"
              class="emotion-6"
            >
              <span
                class="emotion-7"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: middle;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </div>
        </h3>
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            <div
              class="react-tabs"
              data-tabs="true"
            >
              <ul
                class="react-tabs__tab-list"
                role="tablist"
              >
                <li
                  aria-controls="react-tabs-17"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  id="react-tabs-16"
                  role="tab"
                  tabindex="0"
                >
                  ArrowButton
                </li>
                <li
                  aria-controls="react-tabs-19"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  id="react-tabs-18"
                  role="tab"
                >
                  My Button Tab
                </li>
              </ul>
              <div
                aria-labelledby="react-tabs-16"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="react-tabs-17"
                role="tabpanel"
              >
                <div>
                  <div
                    class="emotion-10"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-12"
                      >
                        <button
                          aria-label="copy the displayed source code"
                          class="emotion-13"
                        >
                          copy
                        </button>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse repository"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          browse
                        </a>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse readme documentation"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/tree/master#readme"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          docs
                        </a>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse filed issues"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/issues"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          issues
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    class="emotion-20"
                  >
                    <pre
                      class="prism-code language-jsx emotion-21"
                      style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; display: block; margin: 0px;"
                    >
                      <div
                        class="token-line emotion-22"
                        style="color: rgb(114, 143, 203);"
                      >
                        <span
                          class="token keyword emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          import
                        </span>
                        <span
                          class="token plain emotion-23"
                        >
                           ArrowButton 
                        </span>
                        <span
                          class="token keyword emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          from
                        </span>
                        <span
                          class="token plain emotion-23"
                        >
                           
                        </span>
                        <span
                          class="token string emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          '@component-controls/blocks'
                        </span>
                        <span
                          class="token punctuation emotion-23"
                          style="color: rgb(182, 173, 154);"
                        >
                          ;
                        </span>
                      </div>
                    </pre>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="react-tabs-18"
                class="react-tabs__tab-panel"
                id="react-tabs-19"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentSource noComponent snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -22px;
}

.emotion-3:hover {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
  margin-bottom: 16px;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 4px;
  padding-bottom: 4px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  cursor: pointer;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: 8px;
  padding-bottom: 8px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8:hover a {
  visibility: visible;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-9 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-9 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-9 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-9 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-9 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-9 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-9 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-9 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-9 .react-tabs__tab-panel {
  display: none;
}

.emotion-9 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-9 .react-tabs__tab {
  font-size: 14px;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-12 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-12 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-14 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-14 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-21 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-21 code {
  color: inherit;
}

.emotion-22 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-23 {
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id="component"
    >
      <div
        class="emotion-2"
      >
        <a
          aria-label="navigate to Component section"
          class="emotion-3"
          data-id="component"
          data-level="3"
          data-title="Component"
          href="http://localhost/#component"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="18"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h3
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            Component
            <a
              aria-expanded="true"
              class="emotion-6"
            >
              <span
                class="emotion-7"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: middle;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </div>
        </h3>
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            <div
              class="react-tabs"
              data-tabs="true"
            >
              <ul
                class="react-tabs__tab-list"
                role="tablist"
              >
                <li
                  aria-controls="react-tabs-33"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  id="react-tabs-32"
                  role="tab"
                  tabindex="0"
                >
                  ArrowButton
                </li>
                <li
                  aria-controls="react-tabs-35"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  id="react-tabs-34"
                  role="tab"
                >
                  My Button Tab
                </li>
              </ul>
              <div
                aria-labelledby="react-tabs-32"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="react-tabs-33"
                role="tabpanel"
              >
                <div>
                  <div
                    class="emotion-10"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-12"
                      >
                        <button
                          aria-label="copy the displayed source code"
                          class="emotion-13"
                        >
                          copy
                        </button>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse repository"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          browse
                        </a>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse readme documentation"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/tree/master#readme"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          docs
                        </a>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse filed issues"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/issues"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          issues
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    class="emotion-20"
                  >
                    <pre
                      class="prism-code language-jsx emotion-21"
                      style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; display: block; margin: 0px;"
                    >
                      <div
                        class="token-line emotion-22"
                        style="color: rgb(114, 143, 203);"
                      >
                        <span
                          class="token keyword emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          import
                        </span>
                        <span
                          class="token plain emotion-23"
                        >
                           ArrowButton 
                        </span>
                        <span
                          class="token keyword emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          from
                        </span>
                        <span
                          class="token plain emotion-23"
                        >
                           
                        </span>
                        <span
                          class="token string emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          '@component-controls/blocks'
                        </span>
                        <span
                          class="token punctuation emotion-23"
                          style="color: rgb(182, 173, 154);"
                        >
                          ;
                        </span>
                      </div>
                    </pre>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="react-tabs-34"
                class="react-tabs__tab-panel"
                id="react-tabs-35"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentSource notCollapsible snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -20px;
}

.emotion-3:hover {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 16px;
  margin-top: 16px;
  margin-bottom: 16px;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 4px;
  padding-bottom: 4px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5:hover a {
  visibility: visible;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-6 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-6 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-6 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-6 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-6 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-6 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-6 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-6 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-6 .react-tabs__tab-panel {
  display: none;
}

.emotion-6 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-6 .react-tabs__tab {
  font-size: 14px;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-9 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-9 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-11 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-11 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-18 code {
  color: inherit;
}

.emotion-19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-20 {
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id="arrowbutton"
    >
      <div
        class="emotion-2"
      >
        <a
          aria-label="navigate to ArrowButton section"
          class="emotion-3"
          data-id="arrowbutton"
          data-level="4"
          data-title="ArrowButton"
          href="http://localhost/#arrowbutton"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h4
          class="emotion-4"
        >
          ArrowButton
        </h4>
      </div>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-6"
      >
        <div
          class="react-tabs"
          data-tabs="true"
        >
          <ul
            class="react-tabs__tab-list"
            role="tablist"
          >
            <li
              aria-controls="react-tabs-25"
              aria-disabled="false"
              aria-selected="true"
              class="react-tabs__tab react-tabs__tab--selected"
              id="react-tabs-24"
              role="tab"
              tabindex="0"
            >
              ArrowButton
            </li>
            <li
              aria-controls="react-tabs-27"
              aria-disabled="false"
              aria-selected="false"
              class="react-tabs__tab"
              id="react-tabs-26"
              role="tab"
            >
              My Button Tab
            </li>
          </ul>
          <div
            aria-labelledby="react-tabs-24"
            class="react-tabs__tab-panel react-tabs__tab-panel--selected"
            id="react-tabs-25"
            role="tabpanel"
          >
            <div>
              <div
                class="emotion-7"
              >
                <div
                  class="emotion-8"
                >
                  <div
                    class="emotion-9"
                  >
                    <button
                      aria-label="copy the displayed source code"
                      class="emotion-10"
                    >
                      copy
                    </button>
                  </div>
                  <div
                    class="emotion-11"
                  >
                    <a
                      aria-label="browse repository"
                      class="emotion-12"
                      href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      browse
                    </a>
                  </div>
                  <div
                    class="emotion-11"
                  >
                    <a
                      aria-label="browse readme documentation"
                      class="emotion-12"
                      href="https://github.com/ccontrols/component-controls/tree/master#readme"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      docs
                    </a>
                  </div>
                  <div
                    class="emotion-11"
                  >
                    <a
                      aria-label="browse filed issues"
                      class="emotion-12"
                      href="https://github.com/ccontrols/component-controls/issues"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      issues
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="emotion-17"
              >
                <pre
                  class="prism-code language-jsx emotion-18"
                  style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; display: block; margin: 0px;"
                >
                  <div
                    class="token-line emotion-19"
                    style="color: rgb(114, 143, 203);"
                  >
                    <span
                      class="token keyword emotion-20"
                      style="color: rgb(114, 143, 203);"
                    >
                      import
                    </span>
                    <span
                      class="token plain emotion-20"
                    >
                       ArrowButton 
                    </span>
                    <span
                      class="token keyword emotion-20"
                      style="color: rgb(114, 143, 203);"
                    >
                      from
                    </span>
                    <span
                      class="token plain emotion-20"
                    >
                       
                    </span>
                    <span
                      class="token string emotion-20"
                      style="color: rgb(114, 143, 203);"
                    >
                      '@component-controls/blocks'
                    </span>
                    <span
                      class="token punctuation emotion-20"
                      style="color: rgb(182, 173, 154);"
                    >
                      ;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="react-tabs-26"
            class="react-tabs__tab-panel"
            id="react-tabs-27"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentSource overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3:hover a {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-4 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-4 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-4 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-4 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-4 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-4 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-4 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-4 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-4 .react-tabs__tab-panel {
  display: none;
}

.emotion-4 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-4 .react-tabs__tab {
  font-size: 14px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-7 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-7 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-9 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-9 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-16 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-16 code {
  color: inherit;
}

.emotion-17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-18 {
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="react-tabs"
              data-tabs="true"
            >
              <ul
                class="react-tabs__tab-list"
                role="tablist"
              >
                <li
                  aria-controls="react-tabs-1"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  id="react-tabs-0"
                  role="tab"
                  tabindex="0"
                >
                  ArrowButton
                </li>
                <li
                  aria-controls="react-tabs-3"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  id="react-tabs-2"
                  role="tab"
                >
                  My Button Tab
                </li>
              </ul>
              <div
                aria-labelledby="react-tabs-0"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="react-tabs-1"
                role="tabpanel"
              >
                <div>
                  <div
                    class="emotion-5"
                  >
                    <div
                      class="emotion-6"
                    >
                      <div
                        class="emotion-7"
                      >
                        <button
                          aria-label="copy the displayed source code"
                          class="emotion-8"
                        >
                          copy
                        </button>
                      </div>
                      <div
                        class="emotion-9"
                      >
                        <a
                          aria-label="browse repository"
                          class="emotion-10"
                          href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          browse
                        </a>
                      </div>
                      <div
                        class="emotion-9"
                      >
                        <a
                          aria-label="browse readme documentation"
                          class="emotion-10"
                          href="https://github.com/ccontrols/component-controls/tree/master#readme"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          docs
                        </a>
                      </div>
                      <div
                        class="emotion-9"
                      >
                        <a
                          aria-label="browse filed issues"
                          class="emotion-10"
                          href="https://github.com/ccontrols/component-controls/issues"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          issues
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    class="emotion-15"
                  >
                    <pre
                      class="prism-code language-jsx emotion-16"
                      style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; display: block; margin: 0px;"
                    >
                      <div
                        class="token-line emotion-17"
                        style="color: rgb(114, 143, 203);"
                      >
                        <span
                          class="token keyword emotion-18"
                          style="color: rgb(114, 143, 203);"
                        >
                          import
                        </span>
                        <span
                          class="token plain emotion-18"
                        >
                           ArrowButton 
                        </span>
                        <span
                          class="token keyword emotion-18"
                          style="color: rgb(114, 143, 203);"
                        >
                          from
                        </span>
                        <span
                          class="token plain emotion-18"
                        >
                           
                        </span>
                        <span
                          class="token string emotion-18"
                          style="color: rgb(114, 143, 203);"
                        >
                          '@component-controls/blocks'
                        </span>
                        <span
                          class="token punctuation emotion-18"
                          style="color: rgb(182, 173, 154);"
                        >
                          ;
                        </span>
                      </div>
                    </pre>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="react-tabs-2"
                class="react-tabs__tab-panel"
                id="react-tabs-3"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentSource theme snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3:hover a {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-6 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-6 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-9 code {
  color: inherit;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-11 {
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="emotion-3"
        >
          <div>
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <button
                    aria-label="copy the displayed source code"
                    class="emotion-7"
                  >
                    copy
                  </button>
                </div>
              </div>
            </div>
            <div
              class="emotion-8"
            >
              <pre
                class="prism-code language-jsx emotion-9"
                style="color: rgb(158, 254, 255); background-color: rgb(45, 42, 85); padding: 25px 10px 10px; display: block; margin: 0px;"
              >
                <div
                  class="token-line emotion-10"
                  style="color: rgb(158, 254, 255);"
                >
                  <span
                    class="token keyword emotion-11"
                    style="color: rgb(255, 157, 0);"
                  >
                    import
                  </span>
                  <span
                    class="token plain emotion-11"
                  >
                     
                  </span>
                  <span
                    class="token punctuation emotion-11"
                    style="color: rgb(255, 255, 255);"
                  >
                    {
                  </span>
                  <span
                    class="token plain emotion-11"
                  >
                     Button 
                  </span>
                  <span
                    class="token punctuation emotion-11"
                    style="color: rgb(255, 255, 255);"
                  >
                    }
                  </span>
                  <span
                    class="token plain emotion-11"
                  >
                     
                  </span>
                  <span
                    class="token keyword emotion-11"
                    style="color: rgb(255, 157, 0);"
                  >
                    from
                  </span>
                  <span
                    class="token plain emotion-11"
                  >
                     
                  </span>
                  <span
                    class="token string emotion-11"
                    style="color: rgb(165, 255, 144);"
                  >
                    '../../components/button-named-arrow-func'
                  </span>
                  <span
                    class="token punctuation emotion-11"
                    style="color: rgb(255, 255, 255);"
                  >
                    ;
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentSource title snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -22px;
}

.emotion-3:hover {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
  margin-bottom: 16px;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 4px;
  padding-bottom: 4px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  cursor: pointer;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: 8px;
  padding-bottom: 8px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8:hover a {
  visibility: visible;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-9 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-9 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-9 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-9 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-9 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-9 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-9 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-9 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-9 .react-tabs__tab-panel {
  display: none;
}

.emotion-9 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-9 .react-tabs__tab {
  font-size: 14px;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-12 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-12 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-14 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-14 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-14 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-21 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-21 code {
  color: inherit;
}

.emotion-22 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-23 {
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      id="arrowbutton"
    >
      <div
        class="emotion-2"
      >
        <a
          aria-label="navigate to ArrowButton section"
          class="emotion-3"
          data-id="arrowbutton"
          data-level="3"
          data-title="ArrowButton"
          href="http://localhost/#arrowbutton"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="18"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h3
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            ArrowButton
            <a
              aria-expanded="true"
              class="emotion-6"
            >
              <span
                class="emotion-7"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: middle;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </div>
        </h3>
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="emotion-8"
        >
          <div
            class="emotion-9"
          >
            <div
              class="react-tabs"
              data-tabs="true"
            >
              <ul
                class="react-tabs__tab-list"
                role="tablist"
              >
                <li
                  aria-controls="react-tabs-9"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  id="react-tabs-8"
                  role="tab"
                  tabindex="0"
                >
                  ArrowButton
                </li>
                <li
                  aria-controls="react-tabs-11"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  id="react-tabs-10"
                  role="tab"
                >
                  My Button Tab
                </li>
              </ul>
              <div
                aria-labelledby="react-tabs-8"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="react-tabs-9"
                role="tabpanel"
              >
                <div>
                  <div
                    class="emotion-10"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-12"
                      >
                        <button
                          aria-label="copy the displayed source code"
                          class="emotion-13"
                        >
                          copy
                        </button>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse repository"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          browse
                        </a>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse readme documentation"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/tree/master#readme"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          docs
                        </a>
                      </div>
                      <div
                        class="emotion-14"
                      >
                        <a
                          aria-label="browse filed issues"
                          class="emotion-15"
                          href="https://github.com/ccontrols/component-controls/issues"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          issues
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    class="emotion-20"
                  >
                    <pre
                      class="prism-code language-jsx emotion-21"
                      style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; display: block; margin: 0px;"
                    >
                      <div
                        class="token-line emotion-22"
                        style="color: rgb(114, 143, 203);"
                      >
                        <span
                          class="token keyword emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          import
                        </span>
                        <span
                          class="token plain emotion-23"
                        >
                           ArrowButton 
                        </span>
                        <span
                          class="token keyword emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          from
                        </span>
                        <span
                          class="token plain emotion-23"
                        >
                           
                        </span>
                        <span
                          class="token string emotion-23"
                          style="color: rgb(114, 143, 203);"
                        >
                          '@component-controls/blocks'
                        </span>
                        <span
                          class="token punctuation emotion-23"
                          style="color: rgb(182, 173, 154);"
                        >
                          ;
                        </span>
                      </div>
                    </pre>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="react-tabs-10"
                class="react-tabs__tab-panel"
                id="react-tabs-11"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
